# Dinossauro-Google

./: CMakeLists.txt
src/: Alocacoes.cpp  Alocacoes.h  Atualizar.cpp  Atualizar.h  CMakeLists.txt  Colisao.cpp  Colisao.h  DNAs.cpp  DNAs.h  Defines.h  Desenhar.cpp  Desenhar.h  FuncoesAuxiliares.cpp  FuncoesAuxiliares.h  GeradorObstaculos.cpp  GeradorObstaculos.h  Inicializar.cpp  Inicializar.h  InputsRedeNeural.cpp  InputsRedeNeural.h  Movimentar.cpp  Movimentar.h  Sprites.cpp  Sprites.h  Tipos.h  Variaveis.h  main.cpp  obstaculos.txt  redeNeural.cpp  redeNeural.h  vars.cpp
